# e_commerce

./: package-lock.json
back/: pyproject.toml
front/: package-lock.json  package.json
